<resources>
    <string name="application_name">Cerita <font color="#36B991">Kita</font></string>
    <string name="unknown">Unknown</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="let_start">Let\'s Start</string>
    <string name="login_register_come_on">Login / Register Come on!</string>
    <string name="please_enter_your_registered_email_and_password">Please enter your registered email and password.</string>
    <string name="email">Email</string>
    <string name="invalid_email_format">Invalid email format.</string>
    <string name="password_min_6_character">Password min 6 character.</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <font color="#36B991"><b>Register</b></font></string>
    <string name="just_a_little_more">Just a Little More!</string>
    <string name="hi_new_users_please_complete_the_data_below">Hi new users, please complete the data below.</string>
    <string name="full_name">Full name</string>
    <string name="full_name_min_6_character">Full name min 6 character.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? <font color="#36B991"><b>Log In</b></font></string>
    <string name="an_unknown_error_occurred">An unknown error occurred.</string>
    <string name="share_story">Share Story</string>
    <string name="your_story">Your Story</string>
    <string name="story_should_not_be_empty">Story should not be empty.</string>
    <string name="share">Share</string>
    <string name="choose_image">Choose Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="need_access_camera">Need access camera</string>
    <string name="oke">Oke</string>
    <string name="need_access_storage">Need access storage</string>
    <string name="logout">Logout</string>
    <string name="story">Story</string>
    <string name="location">Location</string>
    <string name="google_map_error">Google Map Error.</string>
</resources>