<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_variant"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.github.fajaragungpramana.ceritakita.widget.view.AppToolbar
        android:id="@+id/at_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:appToolbarNavigationIcon="@drawable/ic_back"
        app:appToolbarTitle="@string/just_a_little_more" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/CaptionRoboto_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:text="@string/hi_new_users_please_complete_the_data_below" />

    <com.github.fajaragungpramana.ceritakita.widget.view.AppEditText
        android:id="@+id/aet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_24"
        app:appEditTextErrorMessage="@string/full_name_min_6_character"
        app:appEditTextHint="@string/full_name"
        app:appEditTextInputType="text" />

    <com.github.fajaragungpramana.ceritakita.widget.view.AppEditText
        android:id="@+id/aet_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        app:appEditTextErrorMessage="@string/invalid_email_format"
        app:appEditTextHint="@string/email"
        app:appEditTextInputType="textEmailAddress" />

    <com.github.fajaragungpramana.ceritakita.widget.view.AppEditText
        android:id="@+id/aet_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        app:appEditTextErrorMessage="@string/password_min_6_character"
        app:appEditTextHint="@string/password"
        app:appEditTextInputType="textPassword" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_register"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:enabled="false"
        android:text="@string/register" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_login"
        style="@style/CaptionRoboto_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/already_have_an_account_log_in" />

</androidx.appcompat.widget.LinearLayoutCompat>