<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_variant"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.github.fajaragungpramana.ceritakita.widget.view.AppToolbar
        android:id="@+id/at_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:appToolbarNavigationIcon="@drawable/ic_back"
        app:appToolbarTitle="@string/login_register_come_on" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/CaptionRoboto_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:text="@string/please_enter_your_registered_email_and_password" />

    <com.github.fajaragungpramana.ceritakita.widget.view.AppEditText
        android:id="@+id/aet_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_24"
        app:appEditTextErrorMessage="@string/invalid_email_format"
        app:appEditTextHint="@string/email"
        app:appEditTextInputType="textEmailAddress" />

    <com.github.fajaragungpramana.ceritakita.widget.view.AppEditText
        android:id="@+id/aet_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        app:appEditTextErrorMessage="@string/password_min_6_character"
        app:appEditTextHint="@string/password"
        app:appEditTextInputType="textPassword" />

</androidx.appcompat.widget.LinearLayoutCompat>