<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="80dp"
        android:layout_height="@dimen/dimen_8"
        android:layout_gravity="center"
        android:src="@drawable/bg_rectangle_rounded"
        app:tint="@color/color_primary_variant" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/HeadingUbuntu_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:text="@string/choose_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_camera"
        style="@style/BodyUbuntu_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/color_primary_variant"
        android:drawablePadding="@dimen/dimen_16"
        android:gravity="center_vertical"
        android:padding="@dimen/dimen_16"
        android:text="@string/camera"
        android:textColor="@color/color_primary_black"
        app:drawableStartCompat="@drawable/ic_camera"
        app:drawableTint="@color/color_primary_black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_gallery"
        style="@style/BodyUbuntu_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/color_primary_variant"
        android:drawablePadding="@dimen/dimen_16"
        android:gravity="center_vertical"
        android:padding="@dimen/dimen_16"
        android:text="@string/gallery"
        android:textColor="@color/color_primary_black"
        app:drawableStartCompat="@drawable/ic_image"
        app:drawableTint="@color/color_primary_black" />

</androidx.appcompat.widget.LinearLayoutCompat>